# tools

./: .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml
src/: auth.py  config.py  db.py  dependencies.py
src/handlers/: conversations.py  files.py  folders.py  rag.py  transcriptions.py
src/services/: s3.py
